bk_ida/gccida/c1/check_dbra_loop
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_dbra_loop/src/loop.c:8356:4: error: expected ';' after expression
rtx v17; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_dbra_loop/src/loop.c:8356:5: error: use of undeclared identifier 'v17'
rtx v17; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_dbra_loop/src/loop.c:8368:4: error: expected ';' after expression
rtx v29; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_dbra_loop/src/loop.c:8368:5: error: use of undeclared identifier 'v29'
rtx v29; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_dbra_loop/src/loop.c:8375:4: error: expected ';' after expression
rtx v36; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_dbra_loop/src/loop.c:8375:5: error: use of undeclared identifier 'v36'
rtx v36; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_dbra_loop/src/loop.c:8385:4: error: expected ';' after expression
rtx v46; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_dbra_loop/src/loop.c:8385:5: error: use of undeclared identifier 'v46'
rtx v46; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_dbra_loop/src/loop.c:8387:4: error: expected ';' after expression
rtx v48; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_dbra_loop/src/loop.c:8387:5: error: use of undeclared identifier 'v48'
rtx v48; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_dbra_loop/src/loop.c:8390:4: error: expected ';' after expression
rtx v51; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_dbra_loop/src/loop.c:8390:5: error: use of undeclared identifier 'v51'
rtx v51; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_dbra_loop/src/loop.c:8391:6: error: use of undeclared identifier 'v52'
rtx *v52; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_dbra_loop/src/loop.c:8395:4: error: expected ';' after expression
rtx v56; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_dbra_loop/src/loop.c:8395:5: error: use of undeclared identifier 'v56'
rtx v56; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_dbra_loop/src/loop.c:8397:4: error: expected ';' after expression
rtx v58; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_dbra_loop/src/loop.c:8397:5: error: use of undeclared identifier 'v58'
rtx v58; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_dbra_loop/src/loop.c:8399:4: error: expected ';' after expression
rtx v60; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_dbra_loop/src/loop.c:8399:5: error: use of undeclared identifier 'v60'
rtx v60; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_dbra_loop/src/obj/loop.o] Error 1
